--- a/travelRecommendation/travel_recommendation.css
+++ b/travelRecommendation/travel_recommendation.css
@@ -174,6 +174,10 @@ nav span {
     visibility: hidden;
 }
 
+#searchResults img {
+    width: 400px;
+}
+
 .visible {
     visibility: visible !important;
 }
